cmake_minimum_required(VERSION 3.9)
project(kaoyan_data_structure)

set(CMAKE_CXX_STANDARD 11)

add_executable(kaoyan_data_structure main.cpp linear_list/linear_list.h linear_list/t2.2.10.h util.h linear_list/t2.2.11.h linear_list/link_list.h linear_list/t2.3.1.h linear_list/t2.3.2.h linear_list/t2.3.3.h linear_list/t2.3.4.h linear_list/t2.3.5.h linear_list/t2.3.6.h linear_list/t2.3.7.h linear_list/t2.3.9.h linear_list/t2.3.10.h linear_list/t2.3.11.h linear_list/t2.3.12.h linear_list/t2.3.13.h linear_list/t2.3.14.h linear_list/t2.3.15.h linear_list/t2.3.16.h linear_list/link_double_cycle_list.h linear_list/t2.3.17.h linear_list/link_cycle_list.h linear_list/t2.3.18.h linear_list/t2.3.19.h linear_list/link_double_list.h linear_list/t2.3.20.h linear_list/t2.3.21.h linear_list/t2.3.23.h tree/binary_tree.h)
